--- a/app/src/main/res/layout/teleop_fragment.xml
+++ b/app/src/main/res/layout/teleop_fragment.xml
@@ -240,4 +240,34 @@
         android:layout_centerHorizontal="true"
         android:textSize="13sp"/>
 
+    <Chronometer
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/climbChronometer"
+        android:text="00"
+        android:layout_alignBottom="@+id/startclimbButton"
+        android:layout_alignLeft="@+id/lowzerorateTextView"
+        android:layout_alignStart="@+id/lowzerorateTextView" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="90dp"
+        android:layout_height="35dp"
+        android:text="Start/Stop"
+        android:id="@+id/startclimbButton"
+        android:textSize="10sp"
+        android:layout_below="@+id/successfulclimbcheckBox"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="55dp"
+        android:layout_height="35dp"
+        android:textSize="10sp"
+        android:text="Reset"
+        android:id="@+id/resetclimbButton"
+        android:layout_alignBottom="@+id/climbChronometer"
+        android:layout_toRightOf="@+id/increaseGearsPlacedButton"
+        android:layout_toEndOf="@+id/increaseGearsPlacedButton" />
+
 </RelativeLayout>
