--- a/app/src/main/res/layout/teleop_fragment.xml
+++ b/app/src/main/res/layout/teleop_fragment.xml
@@ -270,4 +270,14 @@
         android:layout_toRightOf="@+id/increaseGearsPlacedButton"
         android:layout_toEndOf="@+id/increaseGearsPlacedButton" />
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sensor Activated?"
+        android:id="@+id/sensoractiveCheckBox"
+        android:layout_below="@+id/climbChronometer"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textSize="13sp"/>
+
 </RelativeLayout>
