--- a/app/src/main/res/layout-xlarge-land/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-land/teleop_fragment.xml
@@ -15,11 +15,11 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Gears Picked Up:"
         android:id="@+id/gearsPickedUpTextView"
-        android:layout_marginTop="25dp"
+        android:textSize="10sp"
         android:layout_below="@+id/teleopPeriodTextView"
         android:layout_alignRight="@+id/gearsDroppedTextView"
         android:layout_alignEnd="@+id/gearsDroppedTextView"
-        android:textSize="20sp"/>
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,27 +29,27 @@
         android:id="@+id/teleopPeriodTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="25sp"/>
+        android:textSize="20sp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
         android:text="-"
         android:id="@+id/decreaseGearsPickedUpButton"
         android:layout_below="@+id/gearsPickedUpTextView"
         android:layout_toLeftOf="@+id/gearsPickedUpTextView"
         android:layout_toStartOf="@+id/gearsPickedUpTextView"
-        android:paddingTop="2dp"/>
+        android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
         android:text="+"
         android:id="@+id/increaseGearsPickedUpButton"
         android:layout_alignTop="@+id/decreaseGearsPickedUpButton"
         android:layout_toRightOf="@+id/gearsPickedUpTextView"
         android:layout_toEndOf="@+id/gearsPickedUpTextView"
-        android:paddingTop="2dp"/>
+        android:paddingTop="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -57,8 +57,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="0"
         android:id="@+id/amountGearsPickedUpTextView"
-        android:layout_alignBottom="@+id/decreaseGearsPickedUpButton"
-        android:layout_centerHorizontal="true" />
+        android:textSize="10sp"
+        android:layout_alignBottom="@+id/increaseGearsPickedUpButton"
+        android:layout_alignLeft="@+id/amountGearsDroppedTextView"
+        android:layout_alignStart="@+id/amountGearsDroppedTextView" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -69,27 +71,27 @@
         android:layout_below="@+id/increaseGearsPickedUpButton"
         android:layout_centerHorizontal="true"
         android:paddingTop="10dp"
-        android:textSize="20sp"/>
+        android:textSize="10sp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
         android:text="-"
         android:id="@+id/decreaseGearsDroppedButton"
         android:layout_below="@+id/gearsDroppedTextView"
         android:layout_alignRight="@+id/decreaseGearsPickedUpButton"
         android:layout_alignEnd="@+id/decreaseGearsPickedUpButton"
-        android:paddingTop="2dp"/>
+        android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
         android:text="+"
         android:id="@+id/increaseGearsDroppedButton"
         android:layout_below="@+id/gearsDroppedTextView"
         android:layout_alignLeft="@+id/increaseGearsPickedUpButton"
         android:layout_alignStart="@+id/increaseGearsPickedUpButton"
-        android:paddingTop="2dp"/>
+        android:paddingTop="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -98,7 +100,8 @@
         android:text="0"
         android:id="@+id/amountGearsDroppedTextView"
         android:layout_alignBottom="@+id/increaseGearsDroppedButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="10sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -109,27 +112,27 @@
         android:layout_below="@+id/decreaseGearsDroppedButton"
         android:layout_centerHorizontal="true"
         android:paddingTop="10dp"
-        android:textSize="20sp"/>
+        android:textSize="10sp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
         android:text="-"
         android:id="@+id/decreaseGearsPlacedButton"
         android:layout_below="@+id/gearsPlacedTextView"
         android:layout_alignRight="@+id/decreaseGearsDroppedButton"
         android:layout_alignEnd="@+id/decreaseGearsDroppedButton"
-        android:paddingTop="2dp"/>
+        android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
         android:text="+"
         android:id="@+id/increaseGearsPlacedButton"
         android:layout_below="@+id/gearsPlacedTextView"
         android:layout_alignLeft="@+id/increaseGearsDroppedButton"
         android:layout_alignStart="@+id/increaseGearsDroppedButton"
-        android:paddingTop="2dp"/>
+        android:paddingTop="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -138,6 +141,143 @@
         android:text="0"
         android:id="@+id/amountGearsPlacedTextView"
         android:layout_alignBottom="@+id/increaseGearsPlacedButton"
+        android:layout_centerHorizontal="true"
+        android:textSize="10sp"/>
+
+    <SeekBar
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:id="@+id/ballrateSeekBar"
+        android:max="10"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/amountGearsPlacedTextView"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Ball Rate"
+        android:id="@+id/ballrateTextView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/ballrateSeekBar"
+        android:textSize="11sp"
+        android:layout_marginTop="0dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="0"
+        android:id="@+id/zerorateTextView"
+        android:layout_below="@+id/ballrateSeekBar"
+        android:layout_toLeftOf="@+id/ballrateSeekBar"
+        android:layout_toStartOf="@+id/ballrateSeekBar"
+        android:textSize="11sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="10"
+        android:id="@+id/tenrateTextView"
+        android:layout_alignTop="@+id/ballrateTextView"
+        android:layout_toRightOf="@+id/teleopPeriodTextView"
+        android:layout_toEndOf="@+id/teleopPeriodTextView"
+        android:textSize="11sp"/>
+
+    <SeekBar
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:id="@+id/lowballrateSeekBar"
+        android:layout_below="@+id/ballrateTextView"
+        android:layout_centerHorizontal="true"
+        android:max="10"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Low Ball Rate"
+        android:id="@+id/lowballTextView"
+        android:layout_below="@+id/lowballrateSeekBar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        android:textSize="11sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="0"
+        android:id="@+id/lowzerorateTextView"
+        android:layout_below="@+id/lowballrateSeekBar"
+        android:layout_toLeftOf="@+id/lowballrateSeekBar"
+        android:layout_toStartOf="@+id/lowballrateSeekBar"
+        android:textSize="11sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="10"
+        android:id="@+id/lowtenrateTextView"
+        android:textSize="11sp"
+        android:layout_alignTop="@+id/lowballTextView"
+        android:layout_alignLeft="@+id/tenrateTextView"
+        android:layout_alignStart="@+id/tenrateTextView" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Successful Climb?"
+        android:id="@+id/successfulclimbcheckBox"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/lowballTextView"
+        android:layout_centerHorizontal="true"
+        android:textSize="13sp"/>
+
+    <Chronometer
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/climbChronometer"
+        android:text="00"
+        android:layout_alignBottom="@+id/startclimbButton"
+        android:layout_alignLeft="@+id/lowzerorateTextView"
+        android:layout_alignStart="@+id/lowzerorateTextView" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="90dp"
+        android:layout_height="35dp"
+        android:text="Start/Stop"
+        android:id="@+id/startclimbButton"
+        android:textSize="10sp"
+        android:layout_below="@+id/successfulclimbcheckBox"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="55dp"
+        android:layout_height="35dp"
+        android:textSize="10sp"
+        android:text="Reset"
+        android:id="@+id/resetclimbButton"
+        android:layout_alignBottom="@+id/climbChronometer"
+        android:layout_toRightOf="@+id/increaseGearsPlacedButton"
+        android:layout_toEndOf="@+id/increaseGearsPlacedButton" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sensor Activated?"
+        android:id="@+id/sensoractiveCheckBox"
+        android:layout_below="@+id/climbChronometer"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textSize="13sp"/>
 
 </RelativeLayout>
