--- a/app/src/main/res/layout-xlarge-land/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-land/teleop_fragment.xml
@@ -15,11 +15,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Gears Picked Up:"
         android:id="@+id/gearsPickedUpTextView"
-        android:textSize="10sp"
+        android:textSize="30sp"
         android:layout_below="@+id/teleopPeriodTextView"
-        android:layout_alignRight="@+id/gearsDroppedTextView"
-        android:layout_alignEnd="@+id/gearsDroppedTextView"
-        android:layout_marginTop="10dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,11 +28,11 @@
         android:id="@+id/teleopPeriodTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="20sp"/>
+        android:textSize="30sp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
         android:text="-"
         android:id="@+id/decreaseGearsPickedUpButton"
         android:layout_below="@+id/gearsPickedUpTextView"
@@ -42,8 +41,8 @@
         android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
         android:text="+"
         android:id="@+id/increaseGearsPickedUpButton"
         android:layout_alignTop="@+id/decreaseGearsPickedUpButton"
@@ -57,7 +56,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="0"
         android:id="@+id/amountGearsPickedUpTextView"
-        android:textSize="10sp"
+        android:textSize="25sp"
         android:layout_alignBottom="@+id/increaseGearsPickedUpButton"
         android:layout_alignLeft="@+id/amountGearsDroppedTextView"
         android:layout_alignStart="@+id/amountGearsDroppedTextView" />
@@ -70,12 +69,12 @@
         android:id="@+id/gearsDroppedTextView"
         android:layout_below="@+id/increaseGearsPickedUpButton"
         android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"
-        android:textSize="10sp"/>
+        android:textSize="30sp"
+        android:layout_marginTop="10dp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
         android:text="-"
         android:id="@+id/decreaseGearsDroppedButton"
         android:layout_below="@+id/gearsDroppedTextView"
@@ -84,8 +83,8 @@
         android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
         android:text="+"
         android:id="@+id/increaseGearsDroppedButton"
         android:layout_below="@+id/gearsDroppedTextView"
@@ -101,7 +100,7 @@
         android:id="@+id/amountGearsDroppedTextView"
         android:layout_alignBottom="@+id/increaseGearsDroppedButton"
         android:layout_centerHorizontal="true"
-        android:textSize="10sp"/>
+        android:textSize="25sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -112,11 +111,11 @@
         android:layout_below="@+id/decreaseGearsDroppedButton"
         android:layout_centerHorizontal="true"
         android:paddingTop="10dp"
-        android:textSize="10sp"/>
+        android:textSize="30sp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
         android:text="-"
         android:id="@+id/decreaseGearsPlacedButton"
         android:layout_below="@+id/gearsPlacedTextView"
@@ -125,8 +124,8 @@
         android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
         android:text="+"
         android:id="@+id/increaseGearsPlacedButton"
         android:layout_below="@+id/gearsPlacedTextView"
@@ -142,10 +141,10 @@
         android:id="@+id/amountGearsPlacedTextView"
         android:layout_alignBottom="@+id/increaseGearsPlacedButton"
         android:layout_centerHorizontal="true"
-        android:textSize="10sp"/>
+        android:textSize="25sp"/>
 
     <SeekBar
-        android:layout_width="200dp"
+        android:layout_width="550dp"
         android:layout_height="30dp"
         android:id="@+id/ballrateSeekBar"
         android:max="10"
@@ -163,7 +162,7 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/ballrateSeekBar"
-        android:textSize="11sp"
+        android:textSize="25sp"
         android:layout_marginTop="0dp"/>
 
     <TextView
@@ -175,7 +174,7 @@
         android:layout_below="@+id/ballrateSeekBar"
         android:layout_toLeftOf="@+id/ballrateSeekBar"
         android:layout_toStartOf="@+id/ballrateSeekBar"
-        android:textSize="11sp"/>
+        android:textSize="25sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -183,13 +182,13 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="10"
         android:id="@+id/tenrateTextView"
-        android:layout_alignTop="@+id/ballrateTextView"
-        android:layout_toRightOf="@+id/teleopPeriodTextView"
-        android:layout_toEndOf="@+id/teleopPeriodTextView"
-        android:textSize="11sp"/>
+        android:textSize="25sp"
+        android:layout_below="@+id/ballrateSeekBar"
+        android:layout_alignRight="@+id/ballrateSeekBar"
+        android:layout_alignEnd="@+id/ballrateSeekBar" />
 
     <SeekBar
-        android:layout_width="200dp"
+        android:layout_width="550dp"
         android:layout_height="30dp"
         android:id="@+id/lowballrateSeekBar"
         android:layout_below="@+id/ballrateTextView"
@@ -206,7 +205,7 @@
         android:layout_below="@+id/lowballrateSeekBar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="0dp"
-        android:textSize="11sp"/>
+        android:textSize="25sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -217,7 +216,7 @@
         android:layout_below="@+id/lowballrateSeekBar"
         android:layout_toLeftOf="@+id/lowballrateSeekBar"
         android:layout_toStartOf="@+id/lowballrateSeekBar"
-        android:textSize="11sp"/>
+        android:textSize="25sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -225,7 +224,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="10"
         android:id="@+id/lowtenrateTextView"
-        android:textSize="11sp"
+        android:textSize="25sp"
         android:layout_alignTop="@+id/lowballTextView"
         android:layout_alignLeft="@+id/tenrateTextView"
         android:layout_alignStart="@+id/tenrateTextView" />
@@ -235,49 +234,41 @@
         android:layout_height="wrap_content"
         android:text="Successful Climb?"
         android:id="@+id/successfulclimbcheckBox"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/lowballTextView"
         android:layout_centerHorizontal="true"
-        android:textSize="13sp"/>
+        android:textSize="30sp" />
 
     <Chronometer
-        android:layout_width="25dp"
+        android:layout_width="40dp"
         android:layout_height="25dp"
         android:id="@+id/climbChronometer"
         android:text="00"
         android:layout_alignBottom="@+id/startclimbButton"
         android:layout_alignLeft="@+id/lowzerorateTextView"
-        android:layout_alignStart="@+id/lowzerorateTextView" />
+        android:layout_alignStart="@+id/lowzerorateTextView"
+        android:textSize="25sp"
+        android:layout_marginTop="10dp"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="90dp"
-        android:layout_height="35dp"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
         android:text="Start/Stop"
         android:id="@+id/startclimbButton"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:layout_below="@+id/successfulclimbcheckBox"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="55dp"
-        android:layout_height="35dp"
-        android:textSize="10sp"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
+        android:textSize="15sp"
         android:text="Reset"
         android:id="@+id/resetclimbButton"
         android:layout_alignBottom="@+id/climbChronometer"
         android:layout_toRightOf="@+id/increaseGearsPlacedButton"
         android:layout_toEndOf="@+id/increaseGearsPlacedButton" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sensor Activated?"
-        android:id="@+id/sensoractiveCheckBox"
-        android:layout_below="@+id/climbChronometer"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:textSize="13sp"/>
-
 </RelativeLayout>
